# flask-crud-sqlachemy

./: README.md  app.py  database.py  models.py  pyproject.toml
templates/: add-user.html  edit-user.html  home.html
